--- a/p4_modelisation.ipynb
+++ b/p4_modelisation.ipynb
@@ -585,7 +585,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -3117,7 +3117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
