--- a/p4_modelisation.ipynb
+++ b/p4_modelisation.ipynb
@@ -2624,7 +2624,7 @@
     }
    ],
    "source": [
-    "Calcul_Erreur(y_test,y_pred_xgb)"
+    "Calcul_Erreur(y_test,y_pred_xgb)sklearn"
    ]
   },
   {
