--- a/p4.ipynb
+++ b/p4.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "id": "L-94MSXYLMzP"
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "id": "10HuzuaoLMzP",
     "outputId": "41ab5cd6-3d5a-4981-c295-eaeec8ebfefa"
@@ -457,7 +457,7 @@
        "[4 rows x 47 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "id": "vRcpLl7LLMzR",
     "outputId": "ce5fbbe8-e82c-4bef-f2d5-f9066c83edea"
@@ -662,7 +662,7 @@
        "[4 rows x 46 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "id": "B1BC774fLMzR"
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "id": "6nIiUe96LMzS"
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "id": "ien58E1xLMzS",
     "outputId": "bc6351e8-0ef8-422f-904e-aa6a796399b5"
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "id": "Ruli2pxoLMzS",
     "outputId": "e07963fe-f6f5-4371-fa19-acbb6219f3ad",
@@ -798,7 +798,7 @@
        "  'ZipCode'})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "id": "668Vn5Z8LMzT",
     "outputId": "156228c3-8788-43c1-a9bb-98ddc7b9b40a"
@@ -918,7 +918,7 @@
        "[3340 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,84 +929,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "id": "9IM0RCSFLMzT",
     "outputId": "ebe185bf-ff9d-47b5-f310-5d13978c18b6"
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>dataTypeName</th>\n",
-       "      <th>description</th>\n",
-       "      <th>fieldName</th>\n",
-       "      <th>position</th>\n",
-       "      <th>renderTypeName</th>\n",
-       "      <th>tableColumnId</th>\n",
-       "      <th>width</th>\n",
-       "      <th>cachedContents</th>\n",
-       "      <th>format</th>\n",
-       "      <th>computationStrategy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>350404106</td>\n",
-       "      <td>Zip Codes</td>\n",
-       "      <td>number</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>:@computed_region_q256_3sug</td>\n",
-       "      <td>51</td>\n",
-       "      <td>number</td>\n",
-       "      <td>62603795</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>{'source_columns': ['location'], 'type': 'georegion_match_on_point', 'parameters': {'region': '_q256-3sug', 'primary_key': '_feature_id'}}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id       name dataTypeName description  \\\n",
-       "46  350404106  Zip Codes       number         NaN   \n",
-       "\n",
-       "                      fieldName  position renderTypeName  tableColumnId  \\\n",
-       "46  :@computed_region_q256_3sug        51         number       62603795   \n",
-       "\n",
-       "    width cachedContents format  \\\n",
-       "46    NaN            NaN     {}   \n",
-       "\n",
-       "                                                                                                                           computationStrategy  \n",
-       "46  {'source_columns': ['location'], 'type': 'georegion_match_on_point', 'parameters': {'region': '_q256-3sug', 'primary_key': '_feature_id'}}  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'meta_col_2015' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-2f4ad36b70a4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmeta_col_2015\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmeta_col_2015\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'Zip Codes'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'meta_col_2015' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1015,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "id": "W2dDdipSLMzT",
     "outputId": "fe8d7060-097b-4195-beb7-03653d37f22e"
@@ -1124,7 +1062,7 @@
        "[3340 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1154,7 @@
        "2  47.61334897   -122.33769944     1900 5TH AVE  Seattle   WA   98101"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1325,7 @@
        "[1 rows x 52 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "id": "lz3P1pQOLMzU"
    },
@@ -1432,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "id": "ErvQgh3kLMzU"
    },
